--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,18 +3,28 @@ body {
   text-align: center;
   font-family: 'Merriweather', serif;
 }
+a{
+  color:#11999E;
+}
 
 h1 {
-  margin-top: 0;
+  font-size: 90px;
+  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
+  color:#66BFBF;
+  line-height: 0.5;
 }
 
 h2 {
+  font-size: 2.5rem;
   font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
+  color:#66BFBF;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
+  color:#11999E;
 }
 
 img {
@@ -38,13 +48,13 @@ img {
 }
 
 .top-cloud {
-  position: absolute;
-  right: 400px;
+  position: relative;
+  left: 400px;
   top: 50px;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 400px;
-  bottom: 300px;
+  left: 200px;
+  bottom: 340px;
 }
