--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,17 +1,32 @@
 body {
+  font-color:#40514E;
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
 }
-a{
-  color:#11999E;
+
+a {
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif solid;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+a:hover{
+  color: #EAF6F6;
+}
+hr {
+  border: dotted 7px;
+  border-bottom: none;
+  color: grey;
+  width: 7%;
+  margin: 100px auto 100px auto;
 }
 
 h1 {
   font-size: 90px;
   margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
-  color:#66BFBF;
+  color: #66BFBF;
   line-height: 0.5;
 }
 
@@ -19,42 +34,114 @@ h2 {
   font-size: 2.5rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: normal;
-  color:#66BFBF;
+  color: #66BFBF;
+  padding-bottom: 10px;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
-  color:#11999E;
+  color: #11999E;
 }
 
 img {
-  align-items: center;
+  text-align: center;
+  margin: auto;
 }
-
+p{
+  line-height: 2;
+}
 .top-container {
   background-color: #E4F9F5;
   position: relative;
   padding-top: 100px;
 }
-
+.josedominguez{
+  width:10%;
+}
+.intro{
+  width:30%;
+  margin: auto;
+}
 .middle-container {
+  padding: 100px 0;
 }
 
 .bottom-container {
+  background-color: #66BFBF;
+  padding: 30px 0 0 0;
 }
 
-.diseñador {
+.programador {
   text-decoration: underline;
 }
 
 .top-cloud {
   position: relative;
-  left: 400px;
-  top: 50px;
+  left: 420px;
+  top: 40px;
 }
 
 .bottom-cloud {
   position: absolute;
   left: 200px;
-  bottom: 340px;
+  bottom: 300px;
+}
+
+.skill-row {
+  text-align: left;
+  margin: 100px auto 100px auto;
+  width: 50%;
+}
+
+.computer {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.chillies {
+  color:#11999E;
+  width: 22%;
+  float: right;
+  margin-left: 30px;
+}
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  text-shadow: 0px 1px 3px #533ec9;
+  -webkit-box-shadow: 0px 1px 3px #000000;
+  -moz-box-shadow: 0px 1px 3px #000000;
+  box-shadow: 0px 1px 3px #000000;
+  font-family: 'Montserrat', sans-serif;
+  color: #fffcff;
+  font-size: 20px;
+  line-height: 5;
+  margin: 10px auto 10px auto;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
+.copyright{
+  color: #EAF6F6;
+  margin-bottom: 4px;
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
